[package]
name = "evse-rs"
version = "0.1.0"
edition = "2024"


[dependencies]
ocpp-rs = {git = "https://github.com/unwize/ocpp-rs.git"}
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
rootcause = "0.11.0"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
uuid = { version = "1.19.0", features = ["v4"] }
log = "0.4.29"
colog = "1.4.0"
